assets/css/style.css
body {
	font-family: "RSU";
	padding-top: 70px;
	color: #666;
	-webkit-font-feature-settings: 'tnum';
    -moz-font-feature-settings: 'tnum';
    -ms-font-feature-settings: 'tnum';
}

.footer {
  position: fixed;
  bottom: 0px;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 40px;
}

.navbar-brand {
	font-size: 1.7em;
	padding: 13px 15px;
	color: #FFF;
	font-weight: bold;
}

.navbar-green {
	background-color: #4D8D28;
	color: #FFF;
}

.icon-bar {
	background-color: #fff;
}

.btn {
	border-width: 0 0 2px 0;
	border-radius: 2px;
}

.btn-default {
	background: #FBFBFB;
}

#start-over-btn {
	float: right;
	color: #555;
	font-size: 1.1em;
	margin: 11px 15px 0 0;
	padding: 5px 10px 1px 10px;
	border-color: #A5A5A5;
}

#start-over-btn.en {
	padding: 5px 10px 5px 10px;
}

.card {
	padding: 6px 10px 0 10px;
	box-shadow: 0 1px 2px #aaa;
	background: white;
	border-radius: 3px;
	font-size: 1.3em;
	font-weight: normal;
	margin-bottom: 15px;
	overflow: hidden;
}

.card-divider {
	border-bottom: 1px solid #F0F0F0;
	margin: 5px -10px 5px -10px;
	clear: both;
}

.card > h2 {
	margin: 0 -10px 10px -10px;
	padding: 3px 10px 6px 10px;
	font-size: 1.2em;
	font-weight: bold;
	border-bottom: 1px solid #F0F0F0;
}

.text-green {
	color: #4D8D28;

}.text-dark-green {
	color: #35640a;
}

.origin-title, .destination-title {
	font-weight: bold;
	width: 90px;
	display: block;
	float: left;
}

.destination-title {
	margin-bottom: 5px;
}

.card > span.fare {
	display: block;
	font-size: 3em;
	font-weight: bold;
	line-height: 1.3em;
	text-align: center;
	margin-top: -5px;
}

.card > span.fare.en {
	margin-bottom: 15px;
}

span.card-detail-toggle {
	background: #F0F0F0;
	display: block;
	margin: 0px -10px 0 -10px;
	padding: 6px 10px 4px 10px;
}

span.card-detail-toggle > .fa {
	float: right;
	margin-top: 3px;
	color: #999;
}

.card ul {
	list-style: none;
	padding: 0;
	margin: 0px -10px 0px -10px;
	font-weight: 400;
}

.card li {
	border-bottom: 1px solid #F0F0F0;
	padding: 5px 10px 5px 20px;
}

.card li:last-child {
	border-bottom: none;
}

.fare-breakdown {
	display: none;
}

ul.fare-breakdown > li > .fare {
	float: right;
	font-weight: normal;
}

small {
	color: #999;
	font-size: 0.88em;
}

.station {
	margin-bottom: 10px;
}

.station > .icon {
	float: left;
	margin-right: 10px;
}

.station > .station-name {
	font-weight: bold;
	display: block;
	padding-top: 3px;
	margin-bottom: -4px;
}

.station > .direction {
	font-size: 0.85em;
}

.connecting {
	border-width: 0 0 0 3px;
	border-color: #858585;
	height: 40px;
	margin-left: 24px;
	width: 100%;
	font-size: 0.83em;
	padding: 12px 0 0 5px;
	color: #A8A8A8;
	margin-top: -10px;
}

.connecting.ride {
	border-style: solid;
}

.connecting.change {
	border-style: dotted;
}

.logo {
}

h1.logo {
	font-size: 3em;
	font-family: "Aller";
	color: #fff;
	font-weight: normal;
	margin-bottom: 20px;
}

.select-title {
	height: 43px;
	padding-top: 11px;
	background: #fff;
	width: 100%;
}

/*
 * Plugin: Select2
 * ---------------
 */
.select2-container--default.select2-container--focus,
.select2-selection.select2-container--focus,
.select2-container--default:focus,
.select2-selection:focus,
.select2-container--default:active,
.select2-selection:active {
  outline: none;
}
.select2-container--default .select2-selection--single,
.select2-selection .select2-selection--single {
  border: 1px solid #d2d6de;
  border-radius: 0px;
  padding-top: 11px;
  height: 43px;
  font-size: 1.5em;
  line-height: 20px;
  font-weight: bold;
}
.select2-container .select2-selection--single .select2-selection__rendered {
	/*overflow: visible; */
    text-overflow: ellipsis;
}
.select2-container--default.select2-container--open {
  border-color: #3c8dbc;
}
.select2-dropdown {
  border: 1px solid #d2d6de;
  border-radius: 0px;
}
.select2-container--default .select2-results__option--highlighted[aria-selected] {
  background-color: #3c8dbc;
  color: white;
}
.select2-results__option {
  padding: 6px 12px;
  user-select: none;
  -webkit-user-select: none;
  font-size: 1.13em;
}
.select2-container .select2-selection--single .select2-selection__rendered {
  padding-left: 0;
  padding-right: 0;
  height: auto;
  margin-top: -4px;
}
.select2-container[dir="rtl"] .select2-selection--single .select2-selection__rendered {
  padding-right: 6px;
  padding-left: 20px;
}
.select2-container--default .select2-selection--single .select2-selection__arrow {
  height: 40px;
  right: 3px;
}

.select2-container--default .select2-selection--single .select2-selection__rendered {
	color: #666;
}

.select2-container--default .select2-selection--single .select2-selection__arrow b {
  margin-top: 0;
}
.select2-dropdown .select2-search__field,
.select2-search--inline .select2-search__field {
  border: 1px solid #d2d6de;
}
.select2-dropdown .select2-search__field:focus,
.select2-search--inline .select2-search__field:focus {
  outline: none;
  border: 1px solid #3c8dbc;
}
.select2-container--default .select2-results__option[aria-disabled=true] {
  color: #999;
}
.select2-container--default .select2-results__option[aria-selected=true] {
  background-color: #ddd;
}
.select2-container--default .select2-results__option[aria-selected=true],
.select2-container--default .select2-results__option[aria-selected=true]:hover {
  color: #444;
}
.select2-container--default .select2-selection--multiple {
  border: 1px solid #d2d6de;
  border-radius: 0px;
  height: 34px;
}
.select2-container--default .select2-selection--multiple:focus {
  border-color: #3c8dbc;
}
.select2-container--default.select2-container--focus .select2-selection--multiple {
  border-color: #d2d6de;
}
.select2-container--default .select2-selection--multiple .select2-selection__choice {
  background-color: #3c8dbc;
  border-color: #367fa9;
  padding: 1px 10px;
  color: #fff;
}
.select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
  margin-right: 5px;
  color: rgba(255, 255, 255, 0.7);
}
.select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover {
  color: #fff;
}

.select2-container--default .select2-results__group {
	padding-left: 10px;
}

